--- a/rsi/windows/Tracker/Tracker.csproj
+++ b/rsi/windows/Tracker/Tracker.csproj
@@ -59,7 +59,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ActivityEvent.cs" />
-    <Compile Include="ActivitySocket.cs" />
+    <Compile Include="SensocolSocket.cs" />
     <Compile Include="ActivityTracker.cs" />
     <Compile Include="AppConfig.cs" />
     <Compile Include="FormState.cs" />
@@ -73,6 +73,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
     <EmbeddedResource Include="KeyRecord.resx">
       <DependentUpon>KeyRecord.cs</DependentUpon>
     </EmbeddedResource>
