--- a/rsi/windows/Tracker/Tracker.csproj
+++ b/rsi/windows/Tracker/Tracker.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\..\SuperSocket.ClientEngine.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -75,6 +76,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StartProgarmAfterInstall.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="KeyRecord.resx">
       <DependentUpon>KeyRecord.cs</DependentUpon>
